# miden-winter

./: Cargo.toml  README.md
air/: Cargo.toml
air/src/: proof.rs
core/: Cargo.toml
core/src/stack/: inputs.rs  outputs.rs
miden/: Cargo-arb.toml  Cargo.toml  index.html
miden-crypto/: Cargo.toml
miden-crypto/src/hash/rpo/: digest.rs
miden-crypto/src/merkle/store/: mod.rs
miden/src/: lib.rs  main.rs
miden/src/cli/: data.rs  prove.rs  repl.rs  run.rs  verify.rs
miden/src/cli/debug/: executor.rs  mod.rs
miden/src/examples/: fibonacci.rs  mod.rs
miden/src/repl/: mod.rs
miden/src/tools/: mod.rs
processor/: Cargo.toml
processor/src/advice/: mem_provider.rs
prover/: Cargo.toml
prover/src/: lib.rs
stdlib/assets/: std.masl
verifier/: Cargo.toml
winterfell/air/: Cargo.toml
winterfell/air/src/: options.rs
winterfell/air/src/air/: trace_info.rs
winterfell/air/src/proof/: commitments.rs  context.rs  mod.rs  ood_frame.rs  queries.rs
winterfell/examples/src/: main.rs
winterfell/examples/src/fibonacci/fib2/: mod.rs
winterfell/examples/src/fibonacci/fib8/: mod.rs
winterfell/examples/src/fibonacci/fib_small/: mod.rs
winterfell/examples/src/fibonacci/mulfib2/: mod.rs
winterfell/examples/src/fibonacci/mulfib8/: mod.rs
winterfell/examples/src/lamport/aggregate/: mod.rs
winterfell/examples/src/lamport/threshold/: mod.rs
winterfell/fri/: Cargo.toml
winterfell/fri/src/: proof.rs
winterfell/math/: Cargo.toml
winterfell/math/src/field/f64/: mod.rs
winterfell/prover/src/: lib.rs
