[package]
name = "miden-core"
version = "0.5.0"
description = "Miden VM core components"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
edition = "2021"
rust-version = "1.67"

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["math/std", "winter-utils/std"]

[dependencies]
math = { package = "winter-math", path = "../winterfell/math", default-features = false }
crypto = { package = "miden-crypto", path = "../miden-crypto", default-features = false }
winter-crypto = { package = "winter-crypto", path = "../winterfell/crypto", default-features = false }
winter-utils = { package = "winter-utils", path = "../winterfell/utils/core", default-features = false }
serde = { version = "1.0.117", default-features = false, features = ["derive"] }

[dev-dependencies]
proptest = "1.1"
rand_utils = { path = "../winterfell/utils/rand", package = "winter-rand-utils" }
